[gd_scene load_steps=2 format=3 uid="uid://bkq41e5opk1dr"]

[ext_resource type="Script" path="res://Quest/script/QuestMenu.gd" id="1_p8jem"]

[node name="QuestMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8jem")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -294.0
offset_right = 318.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="QuestListContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="QuestListLabel" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestListContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 5
theme_override_font_sizes/font_size = 24
text = "Available Quests"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestListContent" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestListContainer/ScrollContainer"]
layout_mode = 2

[node name="QuestLocked" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestListContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 5
theme_override_font_sizes/font_size = 24
text = "Locked Quests"

[node name="ScrollContainerLocked" type="ScrollContainer" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestListContent" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestListContainer/ScrollContainerLocked"]
layout_mode = 2

[node name="QuestDetailsContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="CurrentQuestLabel" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestDetailsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="RewardPreview" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestDetailsContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="DescriptionLabel" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestDetailsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="ButtonContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestDetailsContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="CompleteButton" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestDetailsContainer/ButtonContainer"]
layout_mode = 2
text = "Complete Quest"

[node name="CloseButton" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestDetailsContainer/ButtonContainer"]
layout_mode = 2
text = "Close"

[node name="Pin" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/QuestDetailsContainer/ButtonContainer"]
layout_mode = 2
